--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,7 @@
 body {
     background-color: #f3f3f3;
     font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 
@@ -33,40 +34,46 @@ header ion-icon {
     margin-right: 22px;
 }
 
-
 /* main styles */
 
 main {
-    margin-top: 106px;
-    font-size: 14px;
-    margin-bottom: 85px;
-    width: 100vw;
+    margin: 80px 0;
 }
 
-main div {
-    display: flex;
-    margin-bottom: 4px;
-    padding: 13px;
+main .message {
+    min-height: 40px;
+    width: 100%;
+    padding: 10px 8px;
+    font-weight: 400;
+    line-height: 16px;
+}
+  
+.message span {
+    margin-right: 10px;
+    font-weight: 400;
+    font-style: normal;
+}
+  
+.message b {
+    font-weight:700;
+    font-style: bold;
+}
+  
+.message .time {
+    color: #bdbdbd;
+}
+  
+main .status {
+    background-color: #dcdcdc;
+}
+  
+main .public {
     background-color: #FFFFFF;
-    font-weight: 400;
-    color: chocolate;
 }
-
-main b {
-    font-weight: 700;
-    color: aqua;
+  
+main .private {
+    background-color: #ffdede;
 }
-
-main .timestamp {
-    margin-right: 8px;
-    color: #AAAAAA;
-}
-
-main .text-mensage {
-    margin-left: 6px;
-    font-weight: 400;
-}
-
 
 /* footer styles */
 
@@ -92,6 +99,11 @@ footer input {
     font-style: italic;
     border: none;
     color: black;
+}
+
+footer input:focus {
+    outline: 0;
+    font-style: normal;
 }
 
 footer input::placeholder {
